--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "angular-electron",
-  "description": "Angular Electron sample",
-  "author": {
-    "name": "Maxime GRIS",
-    "email": "maxime.gris@gmail.com"
-  },
-  "version": "15.0.0",
-  "main": "main.js",
-  "private": true,
-  "dependencies": {
-  }
+    "name": "angular-electron",
+    "description": "Angular Electron sample",
+    "author": {
+        "name": "Maxime GRIS",
+        "email": "maxime.gris@gmail.com"
+    },
+    "version": "15.0.0",
+    "main": "main.js",
+    "private": true,
+    "dependencies": {}
 }
