--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@angular/platform-browser": "19.2.14",
         "@angular/platform-browser-dynamic": "19.2.14",
         "@angular/router": "19.2.14",
+        "prettier-plugin-tailwindcss": "0.6.13",
         "rxjs": "7.8.1",
         "tslib": "2.6.2",
         "zone.js": "0.15.1"
@@ -72,10 +73,13 @@
         "@ngx-translate/core": "16.0.4",
         "@ngx-translate/http-loader": "16.0.1",
         "@playwright/test": "1.52.0",
+        "@tailwindcss/forms": "latest",
+        "@tailwindcss/line-clamp": "latest",
         "@types/jest": "29.5.14",
         "@types/node": "22.15.29",
         "@typescript-eslint/eslint-plugin": "8.33.1",
         "@typescript-eslint/parser": "8.33.1",
+        "autoprefixer": "10.4.21",
         "conventional-changelog-cli": "4.1.0",
         "electron": "36.4.0",
         "electron-builder": "26.0.12",
@@ -86,9 +90,12 @@
         "eslint-plugin-jsdoc": "50.7.1",
         "eslint-plugin-prefer-arrow": "1.2.3",
         "jest": "29.7.0",
+        "ngx-tailwind": "4.0.0",
         "node-polyfill-webpack-plugin": "4.1.0",
         "npm-run-all": "4.1.5",
         "playwright": "1.52.0",
+        "postcss": "8.5.6",
+        "tailwindcss": "3.4.17",
         "ts-node": "10.9.2",
         "typescript": "5.8.3",
         "wait-on": "7.2.0",
